Atualização final
